    the slot name is not honored.

  - MAP-INTO did not recognize strings and bit-vectors as vectors.

  - In WITH-PACKAGE-ITERATOR, only symbols which are accessible in the
    current package should be output, and the accesibility type returned
    should correspond to that of FIND-SYMBOL.

  - The expansion of DO/DO* would not enclose the body in a TAGBODY.

* Errors of the interpreter:

  - CASE should use EQL to compare objects, not EQ.

  - Empty PROGN and implicit PROGNs (LAMBDA, etc) should output NIL
    instead of (VALUES). Similarly, a CASE with no matching clause
    should also output NIL.

  - A NIL in the keys position of a CASE clause can never match
    anything: (CASE () (NIL 'A) (T 'B)) => B

  - SETQ can only output one value

  - User could not have a keyword variable with name ALLOW-OTHER-KEYS,
    as in (LAMBDA (&KEY ALLOW-OTHER-KEYS) (PRINT ALLOW-OTHER-KEYS)).

  - Excesive arguments to NOT or NULL were not detected.

  - Under some circumstances, FUNCALL would not signal an error when
    a symbol naming a macro is passed as a first argument.

  - When &ALLOW-OTHER-KEYS was present in the lambda list, any
    occurrence of :ALLOW-OTHER-KEYS is ignored.

* Visible changes:

  - No "Bye" message in QUIT.

  - Function definitions from the interpreter are now remembered by
    default. This means you can now type
	     (DEFUN MY-FUNCTION (X) (COS X))
    and later on
	     (COMPILE 'MY-FUNCTION)
    If you want to save memory, use this to forget these definitions
	     (SETQ SI::*KEEP-DEFINITIONS* NIL)

  - New function SI:MKSTEMP creates an totally new empty file by
    appending a 6-characters prefix to a template supplied by the
    user.

  - COMPILE now creates all temporary files in the directory pointed
    to by the environment variable TMPDIR (Or /tmp if none). It also
    uses MKSTEMP to produce unique file names, and solve the problem
    that dlopen() cannot reload two libraries with the same name.
