@@ -152,10 +152,15 @@
 		    (push (if init (list v init) v) *dl*))
 		   ((atom v)
 		    (error "destructure: ~A is not a list nor a symbol" v))
-		   ((eq (car v) '&whole)
-		    (let ((temp (cadr v)))
-		      (push (if init (list temp init) temp) *dl*)
-		      (dm-vl (cddr v) temp nil)))
+		   ((eq (first v) '&whole)
+		    (let ((whole-var (second v)))
+		      (if (listp whole-var)
+			  (let ((new-whole (gensym)))
+			    (dm-v new-whole init)
+			    (dm-vl whole-var new-whole nil)
+			    (setq whole-var new-whole))
+			  (dm-v whole-var init))
+		      (dm-vl (cddr v) whole-var nil)))
 		   (t
 		    (let ((temp (gensym)))
 		      (push (if init (list temp init) temp) *dl*)
@@ -183,19 +188,22 @@
 		 (3 (list 'CDDDR v))
 		 ))))
 
-    (let ((whole nil))
+    (let* ((whole nil)
+	   (*dl* nil)
+	   (*key-check* nil)
+	   (*arg-check* nil))
       (cond ((listp vl)
 	     (when (eq (first vl) '&whole)
-	       (setq whole (second vl) vl (cddr vl))))
-	    ((symbolp vl) (setq vl (list '&rest vl)))
+	       (setq whole (second vl) vl (cddr vl))
+	       (when (listp whole)
+		 (let ((new-whole (gensym)))
+		   (dm-vl whole new-whole nil)
+		   (setq whole new-whole)))))
+	    ((symbolp vl)
+	     (setq vl (list '&rest vl)))
 	    (t (error "The destructuring-lambda-list ~s is not a list." vl)))
-      (when (not whole)
-	(setq whole (gensym)))
-      (let* ((*dl* nil)
-	     (*key-check* nil)
-	     (*arg-check* nil)
-	     (ppn (dm-vl vl whole macro)))
-	(values ppn whole (nreverse *dl*) *key-check* *arg-check*)))))
+      (if (null whole) (setq whole (gensym)))
+      (values (dm-vl vl whole macro) whole (nreverse *dl*) *key-check* *arg-check*))))
 
 ;;; valid lambda-list to DEFMACRO is:
 ;;;
